--- a/config/database.yml
+++ b/config/database.yml
@@ -22,11 +22,7 @@ test:
   host: localhost
 
 production:
-  adapter: mysql2
+  adapter: postgres
   encoding: utf8
   reconnect: false
-  database: thinkindia_production
   pool: 5
-  username: root
-  password:
-  host: localhost
