--- a/config/database.yml
+++ b/config/database.yml
@@ -22,7 +22,7 @@ test:
   host: localhost
 
 production:
-  adapter: postgres
+  adapter: postgresql
   encoding: utf8
   reconnect: false
   pool: 5
